# iguana

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_time_analysis.md  example.cpp  iguana.vcxproj  iguana.vcxproj.filters  iguana_reflect26_changes.md  json.hpp  reflection.hpp  xml.hpp
.github/workflows/: clang-format.yml  code-coverage.yml  gcc16-cxx26-reflection.yml  linux-clang.yml  linux-gcc-cxx26.yml  linux-gcc.yml  linux_clang.yml  linux_llvm_cov.yml  mac.yml  windows.yml
benchmark/: benchmark.cpp  json_benchmark.cpp  json_benchmark.h  pb_benchmark.cpp  xml_bench.hpp  xml_benchmark.cpp  yaml_benchmark.cpp  yaml_benchmark.hpp
data/: apache_builds.json  bench_num.xml  citm_catalog.json  github_events.json  gsoc-2018.json  instruments.json  mesh.json  mesh.pretty.json  numbers.json  random.json  sample_rss.xml  twitterescaped.json  update-center.json
example/: example.cpp  json_example.cpp  msgpack_example.cpp  test.cpp  test_json_channel.cpp  xml_example.cpp  yaml_example.cpp
frozen/: random.h  string.h
frozen/bits/: pmh.h
iguana/: common.hpp  define.h  dynamic.hpp  enum_reflection.hpp  error_code.h  iguana.hpp  json.hpp  json17.hpp  json_reader.hpp  json_util.hpp  json_writer.hpp  msgpack.hpp  pb2_reader.hpp  pb2_util.hpp  pb2_writer.hpp  pb_reader.hpp  pb_util.hpp  pb_writer.hpp  reflection.hpp  reflection17.hpp  reflection_new.hpp  struct_pb.hpp  type_traits.hpp  util.hpp  value.hpp  version.hpp  xml.hpp  xml17.hpp  xml_reader.hpp  xml_util.hpp  xml_writer.hpp  yaml_reader.hpp  yaml_util.hpp  yaml_writer.hpp
iguana/detail/: CharConv.h  charconv.h  dragonbox_to_chars.h  itoa.hpp  pb_type.hpp  string_stream.hpp  traits.hpp  utf.hpp
iguana/ylt/reflection/: bind_to_tuple.hpp  field_names.hpp  member_count.hpp  member_names.hpp  member_ptr.hpp  member_value.hpp  reflect26_compat.hpp  reflect26_core.hpp  reflect26_dispatch.hpp  std_meta.hpp  template_string.hpp  user_reflect_macro.hpp
iguana/ylt/reflection/internal/: arg_list_macro.hpp  args_count.hpp
lang/: iguana 使用文档.md  struct_pb_intro.md
lang/protobuf/: protobuf 二进制格式说明.md
scripts/: automatic_macro_generator.py  check-clang-format.sh  test_macro_generator.cpp
test/: doctest.h  github_events_schema.h  invalid_data_test.cpp  json_file_test.cpp  person_type.h  test.cpp  test_cpp20.cpp  test_cxx26_reflection.cpp  test_github_events.cpp  test_headers.h  test_headers1.h  test_json_files.cpp  test_pb.cpp  test_proto2.cpp  test_proto3.cpp  test_reflection.cpp  test_some.cpp  test_util.cpp  test_xml.cpp  test_xml_nothrow.cpp  test_yaml.cpp  test_yaml_bech.cpp  test_yaml_nothrow.cpp  unit_test.cpp  xml_unit_test.cpp
test/conformance/: iguana_conformance.cpp
test/proto/: data_def.proto  unittest_proto2.h  unittest_proto2.proto  unittest_proto3.h  unittest_proto3.proto
test_data/: apache_builds_cpp_comments.json  apache_builds_hash_comments.json  cities_sm.json  citm_catalog_nws.json  cookbook_array1.json  cookbook_array2.json  cookbook_array3.json  cookbook_class1.json  cookbook_class3.json  cookbook_class_from_array1.json  cookbook_class_from_array2.json  cookbook_dates1.json  cookbook_dates2.json  cookbook_dates3.json  cookbook_dates4.json  cookbook_enums1.json  cookbook_enums2.json  cookbook_escaped_strings1.json  cookbook_graphs1.json  cookbook_inserting_extracting_raw_json1.json  cookbook_kv1.json  cookbook_kv2.json  cookbook_kv3.json  cookbook_kv4.json  cookbook_numbers1.json  cookbook_numbers2.json  cookbook_numbers3.json  cookbook_optional_values1.json  cookbook_parsing_individual_members1.json  cookbook_parsing_individual_members2.json  cookbook_tuple1.json  cookbook_unknown_types_and_delayed_parsing1.json  cookbook_unknown_types_and_delayed_parsing2.json  cookbook_variant1.json  cookbook_variant2.json  cookbook_variant4.json  optional_tagged_variant.json  optional_variant.json  small_test.json  strings.json  (+1 more)
tool/: README.md  proto_to_struct.cpp  struct_code_generator.hpp
